# corpus

./: Cargo.toml  Dockerfile  README.md  server.json
.github/workflows/: ci.yml  release.yml
src/: chunk.rs  config.rs  corpus.rs  discovery.rs  embed.rs  index.rs  lib.rs  main.rs  manifest.rs  search.rs  server.rs  store.rs
tests/: integration.rs
